Changed the list in the Addition class from LinkedList to ArrayList, and sorted the given functions using the custom functions comparator